# soup

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh  run.sh  setup.sh
include/: render_buffer.hpp  renderer.hpp
sprites/: bouncer.txt  player.txt
src/: common.cpp  common.h  common.hpp  main.cpp  render_buffer.cpp  render_buffer.hpp  renderer.cpp  renderer.hpp  state.cpp  state.hpp  terminal.hpp
src/engine/: game_object.cpp  game_object.hpp
src/entity/: bouncer.cpp  bouncer.hpp  entity.hpp  game_object.cpp  game_object.hpp  player.cpp  player.hpp
src/gfx/: gfx.hpp  render_buffer.cpp  render_buffer.hpp  renderer.cpp  renderer.hpp
src/input/: input.hpp  input_bus.cpp  input_bus.hpp  keys.cpp  keys.hpp
src/util/: std.hpp  types.hpp  util.hpp
